--- a/index.html
+++ b/index.html
@@ -30,15 +30,65 @@
     </header>
 
     <!-- Timeblocks go here -->
-    <div class="containter">
+    <div class="container">
       <div id="hour-7" class="row time-block">
-        <div class="col-md-1">7:00</div>
-        <textarea class="col-md-8 description"></textarea>
+        <div class="col-md-1 ampm">7am</div>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn btn-primary saveBtn">Save</button>
       </div>
       <div id="hour-8" class="row time-block">
-        <div class="col-md-1">8:00</div>
-        <textarea class="col-md-8 description"></textarea>
+        <div class="col-md-1 ampm">8am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-9" class="row time-block">
+        <div class="col-md-1 ampm">9am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-10" class="row time-block">
+        <div class="col-md-1 ampm">10am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-11" class="row time-block">
+        <div class="col-md-1 ampm">11am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-12" class="row time-block">
+        <div class="col-md-1 ampm">12pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-1" class="row time-block">
+        <div class="col-md-1 ampm">1pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-2" class="row time-block">
+        <div class="col-md-1 ampm">2pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-3" class="row time-block">
+        <div class="col-md-1 ampm">3pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-4" class="row time-block">
+        <div class="col-md-1 ampm">4pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-5" class="row time-block">
+        <div class="col-md-1 ampm">5pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn btn-primary saveBtn">Save</button>
+      </div>
+      <div id="hour-6" class="row time-block">
+        <div class="col-md-1 ampm">6pm</div>
+        <textarea class="col-md-10 description"></textarea>
         <button class="btn btn-primary saveBtn">Save</button>
       </div>
     </div>
