--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A Calendar App for Scheduling Your Day</p>
+      <p class="lead">A Calendar App for Today</p>
       <p id="currentDay" class="lead"></p>
     </header>
 
